syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;

package com.example.helloworld;

import "google/protobuf/timestamp.proto";

service CustomerService {
    rpc SearchCustomer(SearchCustomerRequest) returns(SearchCustomerResponse);
}

message SearchCustomerRequest{
    string searchText = 1;
    string searchType = 2;
}

message SearchCustomerResponse{
    message CustomerEntity{
        string custId = 1;
        string citizenId = 2;
        string branch = 3;
        string title = 4;
        string name = 5;
        string lastname = 6;
        string segmant = 7;
        bool jointAccountStatus = 8;
        bool sensitiveAccount = 9;
    }
    message ReturnResult{
        string result = 1;
        string resultCode = 2;
        string resultDescription = 3;
        string errorRefId = 4;
        google.protobuf.Timestamp resultTimestamp = 5;
    }
    
    repeated CustomerEntity bankList = 1;
    ReturnResult returnResult = 2;
}